# waste-sorting-ai

./: .gitignore  LICENSE  README.md  SUMMARY.md  TECHNICAL_NOTES.md  download_data.py  model_comparison.py  monitor_training.sh  pyproject.toml  regenerate_xai.py  requirements.txt
docs/: RESULTS_GUIDE.md  TUTORIAL.md  UNDERSTANDING_RESULTS.md
examples/: README.md
optimized_outputs/: comprehensive_report.txt  report.json
paper_outputs/: results_report.tex  table2_model_comparison.csv  table2_model_comparison.tex  table2_standalone.tex
