[project]
name = "waste-sorting-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "black>=25.9.0",
    "jinja2>=3.1.2",
    "keras>=3.11.3",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
